RESOLVED FIXED312629
REGRESSION(311425@main) [GLIB] Flaky view-transition test crashes
https://bugs.webkit.org/show_bug.cgi?id=312629
Summary REGRESSION(311425@main) [GLIB] Flaky view-transition test crashes
Lauro Moura
Reported 2026-04-17 21:23:28 PDT
imported/w3c/web-platform-tests/html/semantics/embedded-content/the-video-element/resize-during-playback.html imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pageswap-push-with-redirect.html imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pageswap-skip-transition.html imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pageswap-replace-navigation.html imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pagereveal-with-view-transition.html Example trace for pageswap-skip-transition.html: Thread 1 (Thread 0x7f5b05ffb6c0 (LWP 3059048)): #0 0x00007f5dd071fe34 in WebKit::AcceleratedSurface::canvas() () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #1 0x00007f5dd0731cd0 in WebKit::ThreadedCompositor::paintToSkiaCanvas(WebCore::TransformationMatrix const&, WebCore::IntSize const&, WTF::OptionSet<WebCore::CompositionReason, (WTF::ConcurrencyTag)0> const&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #2 0x00007f5dd07396c5 in WebKit::ThreadedCompositor::renderLayerTree() () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #3 0x00007f5dd0733ad5 in WTF::Detail::CallableWrapper<WTF::RunLoop::Timer::Timer<WebKit::ThreadedCompositor>(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral, WebKit::ThreadedCompositor*, void (WebKit::ThreadedCompositor::*)())::{lambda()#1}, void>::call() () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #4 0x00007f5dd25ddef1 in WTF::RunLoop::TimerBase::TimerBase(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral)::{lambda(void*)#1}::_FUN(void*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #5 0x00007f5dd25e16ed in WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #6 0x00007f5dcc4ccf7f in g_main_dispatch (context=context@entry=0x7f5af4000b70) at ../../../../../jhbuild/checkout/glib/glib/gmain.c:3357 #7 0x00007f5dcc4cf6f8 in g_main_context_dispatch_unlocked (context=0x7f5af4000b70) at ../../../../../jhbuild/checkout/glib/glib/gmain.c:4208 #8 g_main_context_dispatch (context=0x7f5af4000b70) at ../../../../../jhbuild/checkout/glib/glib/gmain.c:4196 #9 0x00007f5dd25dfaa4 in WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #10 0x00007f5dd25dfd42 in WTF::RunLoop::run() () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #11 0x00007f5dd255fb8d in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #12 0x00007f5dd25e6a4d in WTF::wtfThreadEntryPoint(void*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #13 0x00007f5dcd68aaa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447 #14 0x00007f5dcd717c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78 And for the video one: Thread 1 (Thread 0x7efbd27fc6c0 (LWP 1742961)): #0 __memcpy_avx512_unaligned_erms () at ../sysdeps/x86_64/multiarch/memmove-vec-unaligned-erms.S:461 #1 0x00007efbdca35ec2 in ?? () from /lib/x86_64-linux-gnu/libgallium-25.2.8-0ubuntu0.24.04.1.so #2 0x00007efbdcc35804 in ?? () from /lib/x86_64-linux-gnu/libgallium-25.2.8-0ubuntu0.24.04.1.so #3 0x00007efbdd357b7a in ?? () from /lib/x86_64-linux-gnu/libgallium-25.2.8-0ubuntu0.24.04.1.so #4 0x00007efbdc64ff9b in ?? () from /lib/x86_64-linux-gnu/libgallium-25.2.8-0ubuntu0.24.04.1.so #5 0x00007efbdc620282 in ?? () from /lib/x86_64-linux-gnu/libgallium-25.2.8-0ubuntu0.24.04.1.so #6 0x00007efbdc6237f3 in ?? () from /lib/x86_64-linux-gnu/libgallium-25.2.8-0ubuntu0.24.04.1.so #7 0x00007efbdc62a1a9 in ?? () from /lib/x86_64-linux-gnu/libgallium-25.2.8-0ubuntu0.24.04.1.so #8 0x00007efc44a4f20a in WebCore::BitmapTexture::updateContents(void const*, WebCore::IntRect const&, WebCore::IntPoint const&, int, WebCore::PixelFormat) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #9 0x00007efc44aa0e79 in WebCore::CoordinatedPlatformLayerBufferVideo::createBufferFromMappedFrameIfNeeded() [clone .part.0] () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #10 0x00007efc44aa106c in WebCore::CoordinatedPlatformLayerBufferVideo::paintToTextureMapper(WebCore::TextureMapper&, WebCore::FloatRect const&, WebCore::TransformationMatrix const&, float) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #11 0x00007efc44a655df in WebCore::TextureMapperLayer::paintSelf(WebCore::TextureMapperPaintOptions&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #12 0x00007efc44a6f770 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #13 0x00007efc44a6fb18 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #14 0x00007efc44a6fb18 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #15 0x00007efc44a6fb18 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #16 0x00007efc44a6fb18 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #17 0x00007efc44a6fb18 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #18 0x00007efc44a6fb18 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #19 0x00007efc44a6fb18 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #20 0x00007efc44a71f90 in WebCore::TextureMapperLayer::paint(WebCore::TextureMapper&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #21 0x00007efc42b3524a in WebKit::ThreadedCompositor::paintToTextureMapper(WebCore::TransformationMatrix const&, WebCore::IntSize const&, WTF::OptionSet<WebCore::CompositionReason, (WTF::ConcurrencyTag)0> const&) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #22 0x00007efc42b391b5 in WebKit::ThreadedCompositor::renderLayerTree() () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #23 0x00007efc42b338d5 in WTF::Detail::CallableWrapper<WTF::RunLoop::Timer::Timer<WebKit::ThreadedCompositor>(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral, WebKit::ThreadedCompositor*, void (WebKit::ThreadedCompositor::*)())::{lambda()#1}, void>::call() () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #24 0x00007efc449d3db1 in WTF::RunLoop::TimerBase::TimerBase(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral)::{lambda(void*)#1}::_FUN(void*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #25 0x00007efc449d75ad in WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #26 0x00007efc3ea66f7f in g_main_dispatch (context=context@entry=0x7efbac000b70) at ../../../../../jhbuild/checkout/glib/glib/gmain.c:3357 #27 0x00007efc3ea696f8 in g_main_context_dispatch_unlocked (context=0x7efbac000b70) at ../../../../../jhbuild/checkout/glib/glib/gmain.c:4208 #28 g_main_context_dispatch (context=0x7efbac000b70) at ../../../../../jhbuild/checkout/glib/glib/gmain.c:4196 #29 0x00007efc449d5964 in WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #30 0x00007efc449d5c02 in WTF::RunLoop::run() () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #31 0x00007efc44955a4d in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #32 0x00007efc449dc90d in WTF::wtfThreadEntryPoint(void*) () from /sdk/webkit/WebKitBuild/WPE/Release/lib/libWPEWebKit-2.0.so.1 #33 0x00007efc3fa8aaa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447 #34 0x00007efc3fb17c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
Attachments
Lauro Moura
Comment 1 2026-04-17 21:29:44 PDT
Test gardening pull request: https://github.com/WebKit/WebKit/pull/63027
EWS
Comment 2 2026-04-17 21:36:28 PDT
Test gardening commit 311509@main (df4b890b2df8): <https://commits.webkit.org/311509@main> Reviewed commits have been landed. Closing PR #63027 and removing active labels.
Carlos Garcia Campos
Comment 3 2026-04-20 01:16:56 PDT
Have you seen these issues in GTK port too?
Carlos Garcia Campos
Comment 4 2026-04-20 03:28:29 PDT
The video issue is now handled in bug #312762
Carlos Garcia Campos
Comment 5 2026-04-20 04:12:35 PDT
Lauro Moura
Comment 6 2026-04-20 19:06:28 PDT
Test gardening pull request: https://github.com/WebKit/WebKit/pull/63190
EWS
Comment 7 2026-04-20 23:45:18 PDT
Committed 311654@main (4c334d3b96b0): <https://commits.webkit.org/311654@main> Reviewed commits have been landed. Closing PR #63112 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.