REGRESSION(311425@main) [GLIB] Flaky view-transition test crashes https://bugs.webkit.org/show_bug.cgi?id=312629

Reviewed by Nikolas Zimmermann.

The problem is that in ThreadedCompositor renderLayerTree can be called
after invalidate. Before 311425@main we returned early because m_context
is also set to nullptr in invalidate, but now the context is always
nullptr when using skia compositor and we are assuming that a null
texture mapper means we are using skia. This patch adds an Invalidated state
to ThreadedCompositor to make sure we always return early from
renderLayerTree after invalidate, and it always uses m_useSkia to check
if we are using the skia compositor.

Fixes: imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pageswap-push-with-redirect.html
       imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pageswap-skip-transition.html
       imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pageswap-replace-navigation.html
       imported/w3c/web-platform-tests/css/css-view-transitions/navigation/pagereveal-with-view-transition.html

* LayoutTests/platform/glib/TestExpectations:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::invalidate):
(WebKit::ThreadedCompositor::isActive const):
(WebKit::ThreadedCompositor::paintToCurrentGLContext):
(WebKit::ThreadedCompositor::renderLayerTree):
(WebKit::ThreadedCompositor::stateToString):
(WebKit::ThreadedCompositor::scheduleUpdateLocked):
(WebKit::ThreadedCompositor::frameComplete):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.h:

Canonical link: https://commits.webkit.org/311654@main